[metadata]
name = mav4
version = 0.0.1
author = Cyber CTI
author_email = author@localhost
description = MA V4 Client
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/cybercti/mav4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mati = mav4.utils.cli.mati:mati
