[metadata]
name = maapi
version = 0.2.7
author = Cyber CTI
author_email = author@localhost
description = MA API Client
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/cybercti/mav4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.27.1
    click==8.1.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mati = maapi.utils.cli.mati_cli:mati
    dtm  = maapi.utils.cli.dtm_cli:dtm
